# minecraft-badapple

./: README.md  commonblocks  commonsuperpixels.json  config.json  count.py  filter.py  generate_pixels.py  independent_opaque.json  independent_transparent.json  opaqueblocks  render_rules.json  requirements.txt  stat.py  superpixel_predictions.json  test.py  transparentblocks  utils.py
badapple/: Cargo.toml
badapple/src/: dither.rs  predict_superpixels.rs  render_frames.rs  types.rs
dither/: Cargo.toml
dither/src/: main.rs
edge/: Cargo.toml
edge/src/: main.rs
new/: common_unpredictable_pixels.json  config.json  generate_pixels.py  independent_opaque.json  independent_transparent.json  opaque.json  render_rules.json  subpixel_predictions.json  superpixel_predictions.json  transparent.json  wall_transparent.json
new/badapple/: Cargo.toml
new/badapple/src/: find_common_unpredictable_pixels.rs  predict_subpixel_colors.rs  predict_superpixels.rs  render_frames.rs  types.rs
new/render_frames/: Cargo.toml
new/render_frames/src/: main.rs
