[package]
name = "badapple"
version = "0.1.0"
edition = "2021"

[dependencies]
fastnbt = "2.5.0"
flate2 = { version = "1.0.33", default-features = false, features = ["zlib-ng"] }
image = { version = "0.25.2", default-features = false, features = ["png"] }
itertools = "0.13.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[profile.release]
debug = true

[[bin]]
name = "render_frames"
path = "src/render_frames.rs"

[[bin]]
name = "predict_superpixels"
path = "src/predict_superpixels.rs"
